# GamblingProjectV2

./: CMakeLists.txt  DOWNLOAD THE FULL PROJECT FROM RELEASE  LICENSE  README.md  main.cpp
static/: common.css  dashboard.html  dice.html  index.html  login.html  register.html  rocket.html
